--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,7 @@ button {
   color: hsl(0, 0%, 100%);
   font-size: 15px;
   font-weight: 700;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 375px) {
